<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_supp">Написать в поддержку</string>
    <string name="user_agr">Пользовательское соглашение</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_via">Поделиться через</string>
    <string name="send_to">borzeok@ya.ru</string>
    <string name="message_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agr_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="empty_search">Ничего не нашлось</string>
    <string name="network_error_search">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>