<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/blue"
        android:paddingHorizontal="@dimen/dp16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:paddingTop="@dimen/dp14"
            android:textColor="@color/white"
            android:textSize="@dimen/sp22"
            android:layout_marginBottom="@dimen/dp24">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/dp24"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp16"
                android:backgroundTint="@color/white"
                android:text="@string/search"
                android:textColor="@color/black"
                android:textSize="@dimen/sp22"
                android:textAllCaps="false"
                app:icon="@drawable/baseline_search_24"
                app:iconTint="@color/black"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dp8"
                app:cornerRadius="@dimen/dp16"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/library"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp16"
                android:backgroundTint="@color/white"
                android:text="@string/library"
                android:textColor="@color/black"
                android:textSize="@dimen/sp22"
                android:textAllCaps="false"
                app:icon="@drawable/baseline_library_music_24"
                app:iconTint="@color/black"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dp8"
                app:cornerRadius="@dimen/dp16"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/settings"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/dp16"
                android:backgroundTint="@color/white"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="@dimen/sp22"
                android:textAllCaps="false"
                app:icon="@drawable/baseline_settings_24"
                app:iconTint="@color/black"
                app:iconGravity="textStart"
                app:iconPadding="@dimen/dp8"
                app:cornerRadius="@dimen/dp16"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>