<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp16"
        android:paddingRight="@dimen/dp12">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp14">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                android:layout_width="@dimen/dp48"
                android:layout_height="@dimen/dp48"
                android:backgroundTint="@color/white"
                android:stateListAnimator="@null"
                app:icon="@drawable/baseline_arrow_back_24"
                app:iconGravity="textStart"
                app:iconTint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp12"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="@dimen/sp22"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp24"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp61"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dark_theme"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:layout_width="56dp"
                    android:layout_height="40dp"
                    app:switchMinWidth="35dp"
                    android:checked="true"
                    app:thumbTint="@color/teal"
                    app:trackTint="@color/light_teal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp61"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_share_24"
                    app:tint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp61"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/write_supp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_support_agent_24"
                    app:tint="@color/gray" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp61"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/dp0"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/user_agr"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp16" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/baseline_keyboard_arrow_right_24"
                    app:tint="@color/gray" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>