<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            style="@style/BackArrowButtonStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/artworkImageView"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:src="@drawable/player_stub"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back"/>

        <TextView
            android:id="@+id/trackNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="Название трека"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artworkImageView"
            style="@style/AudioPlayerTextColor"/>

        <TextView
            android:id="@+id/artistNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="Имя исполнителя"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackNameTextView"
            style="@style/AudioPlayerTextColor"/>

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:layout_marginStart="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView"/>

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/play_button"
            app:layout_constraintEnd_toStartOf="@id/addToFavoritesButton"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView" />

        <ImageButton
            android:id="@+id/addToFavoritesButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/like_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistNameTextView"/>

        <TextView
            android:id="@+id/trackDurationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="0:30"
            android:textSize="14sp"
            android:fontFamily="@font/ys_display_medium"
            app:layout_constraintEnd_toEndOf="@id/playButton"
            app:layout_constraintStart_toStartOf="@id/playButton"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            style="@style/AudioPlayerTextColor"/>

        <TextView
            android:id="@+id/durationLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackDurationTextView"
            style="@style/TrackProperties"/>

        <TextView
            android:id="@+id/durationValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="3:45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/durationLabelTextView"
            style="@style/TrackValues"/>

        <TextView
            android:id="@+id/albumLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/durationLabelTextView"
            style="@style/TrackProperties"/>

        <TextView
            android:id="@+id/albumValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Название альбома"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/albumLabelTextView"
            app:layout_constraintTop_toTopOf="@id/albumLabelTextView"
            style="@style/TrackValues"/>

        <TextView
            android:id="@+id/yearLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumLabelTextView"
            style="@style/TrackProperties"/>

        <TextView
            android:id="@+id/yearValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="2023"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/yearLabelTextView"
            style="@style/TrackValues"/>

        <TextView
            android:id="@+id/genreLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearLabelTextView"
            style="@style/TrackProperties"/>

        <TextView
            android:id="@+id/genreValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Название жанра"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/genreLabelTextView"
            style="@style/TrackValues"/>

        <TextView
            android:id="@+id/countryLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreLabelTextView"
            style="@style/TrackProperties"/>

        <TextView
            android:id="@+id/countryValueTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Название страны"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/countryLabelTextView"
            style="@style/TrackValues"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>