<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp16"
        android:paddingRight="@dimen/dp16">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp14">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                android:layout_width="@dimen/dp48"
                android:layout_height="@dimen/dp48"
                style="@style/BackArrowButtonStyle" />

            <TextView
                android:text="@string/search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/HeaderTextViewStyle"/>

        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="@dimen/dp8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp36">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/dp12"
                android:paddingEnd="@dimen/dp36"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/search"
                style="@style/EditTextViewStyle"
                android:textCursorDrawable="@color/blue"
                android:textColor="@color/pm_black"
                android:inputType="text"
                android:lines="1"
                android:drawableStart="@drawable/baseline_search_18"
                android:drawablePadding="@dimen/dp8"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="@dimen/sp16"/>

            <FrameLayout
                android:id="@+id/clearIcon"
                android:visibility="gone"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp36"
                android:layout_gravity="end|center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_close_24"
                    style="@style/EditTextIconStyle"/>
            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp0"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp16">

            <LinearLayout
                android:id="@+id/historyContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp42"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/you_search"
                    android:textSize="@dimen/sp19"
                    android:textColor="?attr/colorOnSecondary"
                    android:fontFamily="@font/ys_display_medium"
                    android:layout_marginBottom="@dimen/dp12" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/historyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_marginTop="@dimen/dp20"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/clear_btn"
                    android:layout_width="@dimen/dp148"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp16"
                    android:layout_marginBottom="@dimen/dp8"
                    android:text="@string/clear_history"
                    style="@style/SearchControlButtons" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <LinearLayout
                android:layout_width="@dimen/dp312"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/dp102">

                <ImageView
                    android:id="@+id/error_image"
                    android:layout_width="@dimen/dp120"
                    android:layout_height="@dimen/dp120"
                    android:layout_gravity="center"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/error_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp16"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="@dimen/sp19"
                    android:fontFamily="@font/ys_display_medium"
                    style="@style/ErrorSearchStyle"
                    android:visibility="gone"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/update_btn"
                    android:layout_width="@dimen/dp91"
                    android:text="@string/update"
                    android:visibility="gone"
                    style="@style/SearchControlButtons"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>